Layout: produk dan layanan

--- a/partials/top_nav.htm
+++ b/partials/top_nav.htm
@@ -1,4 +1,6 @@
 description = "Top menu"
+
+[viewBag]
 ==
 <ul class="uk-nav uk-navbar-nav uk-visible@s">
     <li class="uk-navbar-item"><a href="{{''|app}}">Home</a></li>
