reorder meta tag

--- a/layouts/home.htm
+++ b/layouts/home.htm
@@ -4,9 +4,11 @@ description = "Home"
 <html lang="en">
 <head>
     {% partial 'head' %}
+    {% put meta_og %}
     <meta property="og:title" content="{{ this.page.meta_title|default(this.page.title) }}" />
     <meta property="og:description" content="{{ this.page.meta_description|default(this.page.description) }}" />
     <meta property="og:url" content="{{this.controller.currentPageUrl()}}" />
+    {% endput %}
 </head>
 <body>
 <div class="uk-position-relative">
