--- a/layouts/home.htm
+++ b/layouts/home.htm
@@ -50,7 +50,7 @@ description = "Home"
             <div>
                 <span uk-icon="icon: social; ratio: 2.5"></span>
                 <h2 class="uk-margin-small">Produk</h2>
-                <p>Menyediakan produk-produk pengembangan dan siap siap paka (ready to use)</p>
+                <p>Menyediakan produk-produk pengembangan dan siap pakai (ready to use)</p>
             </div>
             <div>
                 <span uk-icon="icon: desktop; ratio: 2.5"></span>
