--- a/partials/blog-list.htm
+++ b/partials/blog-list.htm
@@ -74,8 +74,8 @@ postPage = "blog"
                             <a href="{{('/blog/'~post.slug)|app}}"><img class="uk-text-center" data-src="{{'default_image.png'|media}}" alt="" uk-img="target: !.uk-slideshow-items" style="height: 100px;"></a>
                             {% endif %}
                         </div>
-                        <h3 class="uk-margin-remove"><a href="{{('/blog/'~post.slug)|app}}">{{post.title | raw}}</a> </h3>
-                        <span class="uk-text-muted">{{post.published_at | date('d F Y') }}</span>
+                        <h3 class="uk-margin-remove uk-padding-remove"><a href="{{('/blog/'~post.slug)|app}}">{{post.title | raw}}</a> </h3>
+                        <p class="uk-text-muted uk-margin-remove uk-padding-remove">{{post.published_at | date('d F Y') }}</p>
                         {{post.summary | raw}}
                     </div>
                     <div class="uk-card-footer">
