--- a/partials/head.htm
+++ b/partials/head.htm
@@ -18,3 +18,10 @@ description = "Default header"
 <link rel="shortcut icon" href="{{'/favicon.ico'|app}}">
 <link rel="stylesheet" href="{{('assets/css/theme.css')|theme }}?v={{ this.theme.version}}">
 <script src="{{('assets/js/uikit.min.js')|theme}}?v={{this.theme.version}}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-132378792-1"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-132378792-1');
+</script>
