--- a/layouts/message.htm
+++ b/layouts/message.htm
@@ -1,3 +1,23 @@
 description = "Message template"
 ==
-This message template eg: maintenenance, error, 404
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{{ this.page.title }} | {{ this.theme.site_name }}</title>
+    <meta name="title" content="{{ this.page.meta_title|default(this.page.title) }} | {{ this.theme.site_name }}">
+    <meta name="description" content="{{ this.page.meta_description|default(this.page.description) }}" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,user-scalable=1">
+    <meta property="og:site_name" content="{{ this.theme.site_name }} - {{ this.theme.site_motto }}" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="{{ this.page.meta_title|default(this.page.title) }}" />
+    <meta property="og:description" content="{{ this.page.meta_description|default(this.page.description) }}" />
+    <meta property="og:url" content="{{this.controller.currentPageUrl()}}" />
+    <link rel="author" href="humans.txt" />
+    <link rel="shortcut icon" href="{{'/favicon.ico'|app}}">
+    <link rel="stylesheet" href="{{('assets/css/theme.css')|theme }}?v={{ this.theme.version}}">
+</head>
+<body>
+ {% page %}
+</body>
+</html>
